// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`evaluate rules: Check for operationId -- should fail 1`] = `
{
  "error": "The operation does not have an operationId.",
  "passed": false,
}
`;

exports[`evaluate rules: Check for operationId -- should pass 1`] = `
{
  "passed": true,
}
`;

exports[`evaluate rules: Fuzzy property naming rules The keys in an object property should all follow the same naming convention -- not relevant 1`] = `
{
  "skipped": true,
}
`;

exports[`evaluate rules: Fuzzy property naming rules The keys in an object property should all follow the same naming convention -- should fail 1`] = `
{
  "error": "The keys in the object property do not follow the same naming convention. 'ID' and 'last_name' are not consistent.",
  "passed": false,
}
`;

exports[`evaluate rules: Fuzzy property naming rules property with date-like name -- should fail 1`] = `
{
  "error": "The 'created_at' property sounds like it contains a date but it does not use the 'format: datetime'.",
  "passed": false,
}
`;

exports[`evaluate rules: Fuzzy property naming rules property with date-like name -- should pass 1`] = `
{
  "passed": true,
}
`;
